# navl

./: README.md  noxfile.py  pyproject.toml
src/navl/: __init__.py  __main__.py  file_tree_viewer.py  navl.py
tests/: test_file_tree_viewer.py
