[project]
name = "navl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sander Teunissen", email = "s.teunissen@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gitignore-parser>=0.1.12",
    "prompt-toolkit>=3.0.51",
]

[project.scripts]
navl = "navl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-icdiff>=0.9",
    "ruff>=0.12.7",
]
